--- a/index.html
+++ b/index.html
@@ -1,98 +1,85 @@
-<!DOCTYPE HTML>
-<html lang="en">
-  <head>
-    <title>Github R&#233;sum&#233;</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="github, resume, cool">
-    <meta name="description" content="Another resume generator for github user">
-    <!-- bootstrap css -->
-    <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css"/>
-    <!-- use impress demo's font, thanks! -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
-    <!-- rusume style sheet -->
-    <link rel="stylesheet" href="css/style.css" />
-    <!--[IF IE]>
-    <style>
-      .container{
-        margin-right: auto;
-        margin-left: auto;
-        width: 91%;
-        background: url("static/ie-background.png") repeat;
-      }
-    </style>
-    <![endif]-->
-    <script type="text/javascript" src="vendors/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript">
-      $.noConflict();
-    </script>
-    <script src="vendors/js-url.min.js" type="text/javascript" charset="utf-8" language="javascript"></script>
-  </head>
-  <body>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <div class="container" id="user">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-      <!-- avatar from gravatar-->
-      <div class="row">
-        <div class="span3" id="avatar_container">
-          <!-- Is it ok to use this cute cat here? -->
-          <img src="https://a248.e.akamai.net/assets.github.com/images/spinners/octocat-spinner-128.gif?1347543527" alt="avatar" id="avatar" height="170" width="170" />
+  <title>Lmtresume</title>
+  <meta name="description" content="个人简历">
+
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+</head>
+
+<body>
+
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Lmtresume</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">个人简历</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/milkcandylmt/LMTResume/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/milkcandylmt/LMTResume/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/milkcandylmt/LMTResume" class="code">View Lmtresume on GitHub</a>
         </div>
-
-        <!-- header: avatar, name,  login-name-->
-        <div class="span4 offset1">
-          <h1 id="name"></h1>
-          <!-- user infomation list -->
-          <div id="user-info-container">
-            <ul id="user-info">
-            </ul>
-          </div>
+        <span class="blc"></span><span class="trc"></span>
         </div>
+        <article class="markdown-body">
+          <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-        <!-- followers circle -->
-        <div class="span1 countcircle">
-          <div id="follower-number" >
-          </div>
-          <h2>follower</h2>
-        </div>
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
-        <!-- repos count circle -->
-        <div class="span1 countcircle">
-          <div id="repos-count" >
-          </div>
-          <h2>repo</h2>
-        </div>
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-        <!-- hireable circle -->
-        <div class="span1 countcircle">
-          <div id="hireable" >
-          </div>
-          <h2>hireable</h2>
-        </div>
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+        </article>
+      </div>
+    </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/milkcandylmt" class="avatar"><img src="https://avatars2.githubusercontent.com/u/22196843?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/milkcandylmt">milkcandylmt</a> maintains <a href="https://github.com/milkcandylmt/LMTResume">Lmtresume</a></p>
+
 
       </div>
-
-    </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
   </div>
-  <div class="container" id="skills">
-    <h2>Skills</h2>
-    <hr>
-    <ul id="lang-container">
-    </ul>
-  </div>
-  <div class="container" id="repos">
-    <h2>Popular Repositories</h2>
-    <hr>
-    <ul id="repolist">
-    </ul>
-    <p style="text-align:center;clear:both; color:#999">Powered by GhResume licensing BSD</p>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/milkcandylmt/LMTResume/tarball/master" class="tar">tar</a><a href="https://github.com/milkcandylmt/LMTResume/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
   </div>
 
-  <!-- fork me on github banner -->
-  <a href="https://github.com/hit9/GhResume">
-    <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
-  </a>
-
-  <!-- application js-->
-  <script src="js/ghresume.js" type="text/javascript" charset="utf-8" language="javascript"></script>
+  
 </body>
 </html>
