--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Lmtresume</title>
+  <title>resume</title>
   <meta name="description" content="个人简历">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -22,16 +22,16 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Lmtresume</h1>
+      <h1 class="title">resume</h1>
     </header>
     <div id="container">
       <p class="tagline">个人简历</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/milkcandylmt/LMTResume/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/milkcandylmt/LMTResume/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/milkcandylmt/LMTResume" class="code">View Lmtresume on GitHub</a>
+          <a href="https://github.com/milkcandylmt/Resume/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/milkcandylmt/Resume/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/milkcandylmt/Resume" class="code">View resume on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -65,7 +65,7 @@
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/milkcandylmt" class="avatar"><img src="https://avatars2.githubusercontent.com/u/22196843?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/milkcandylmt">milkcandylmt</a> maintains <a href="https://github.com/milkcandylmt/LMTResume">Lmtresume</a></p>
+      <p><a href="https://github.com/milkcandylmt" class="avatar"><img src="https://avatars2.githubusercontent.com/u/22196843?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/milkcandylmt">milkcandylmt</a> maintains <a href="https://github.com/milkcandylmt/Resume">resume</a></p>
 
 
       </div>
@@ -76,7 +76,7 @@
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/milkcandylmt/LMTResume/tarball/master" class="tar">tar</a><a href="https://github.com/milkcandylmt/LMTResume/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/milkcandylmt/Resume/tarball/master" class="tar">tar</a><a href="https://github.com/milkcandylmt/Resume/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
